# visuals

./: .gitignore  .gitmodules  .travis.yml  CMakeLists.txt  README.md  install_dlib.sh  install_opencv.sh  setup.sh  travis.yml
.github/workflows/: main.yml
assets/: particles.comp  shader.frag  shader.vert
include/: CameraHandler.h  CinderOpenCV.h  Detector.h  FaceDetector.h  FaceKeypoints.h  KeyPointDetector.h  KeypointDetector.h  ParticleSystem.h
include/detector/: Detector.h  Face.h  FaceDetector.h  FaceKeypoints.h  KeypointDetector.h  PairOfEyes.h  detector.h
src/: CameraHandler.cpp  Detector.cpp  Face.cpp  FaceDetector.cpp  FaceKeypoints.cpp  KeyPointDetector.cpp  KeypointDetector.cpp  NVidiaComputeParticlesApp.cpp  ParticleSystem.cpp  main.cpp
src/detector/: Detector.cpp  Face.cpp  FaceDetector.cpp  FaceKeypoints.cpp  KeypointDetector.cpp  detector.cpp
